k8s/overlays/viewsonic/deployment/viewsonic-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-service
spec:
  type: NodePort
  selector:
    app: viewsonic-production
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
