k8s/overlays/viewsonic/deployment/viewsonic-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viewsonic-school-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/3fdde8ff-9c5c-40d1-a63e-371718df2174
spec:
  ingressClassName: alb
  rules: 
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viewsonic-school-service
                port:
                  number: 80 
  tls:
    - hosts:
        - greatify.dev
